--- a/user_app/templates/home.html
+++ b/user_app/templates/home.html
@@ -78,6 +78,9 @@
         <h4 class="fw-semibold">My Task List</h4>
         <a href="{% url 'add_task' %}" class="btn btn-add">+ Add Task</a>
       </div>
+       <form action="{% url 'search' %}" method="get">
+        <input type="text" name="q"><span><button type="submit">Search</button></span>
+      </form>
 
       <table class="table table-striped table-hover align-middle">
         <thead>
