--- a/user_app/templates/home.html
+++ b/user_app/templates/home.html
@@ -51,12 +51,19 @@
       background-color: #dc3545;
       color: white;
     }
+    .btn-complete{
+      background-color: rgba(9, 62, 237, 0.529);
+      color: rgb(255, 249, 249);
+
+    }
+
     .badge-complete {
       background-color: #28a745;
     }
     .badge-pending {
       background-color: #6c757d;
     }
+    
   </style>
 </head>
 <body>
@@ -106,7 +113,7 @@
             <td>
               <a href="{% url 'task_update' t.id %}" class="btn btn-sm btn-edit">Edit</a>
               <a href="{% url 'task_delete' t.id %}" class="btn btn-sm btn-delete">Delete</a>
-              <a href="{% url 'complete' t.id %}" class="btn btn-sm btn-complete">Completed</a>
+              <a href="{% url 'complete' t.id %}" class="btn btn-sm btn-complete ">Completed</a>
             </td>
           </tr>
           {% endfor %}
