--- a/user_app/templates/login.html
+++ b/user_app/templates/login.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Expense Tracker Login</h2>
+        <h2>TODO Login</h2>
         <form action="" method="post">
             {% csrf_token %}
             <label for="username">Username</label>
